# devinspect

./: Cargo.toml  Ideation.md  README.md  blog.html  specs.md  tasks.md
Testing/: .string.rs.swp  c_program.c  langchain.py  sleepmachine  string.rs
src/: cli.rs  config.rs  logging.rs  main.rs
src/collectors/: ai.rs  doctor.rs  mod.rs  network.rs  packets.rs  pidstat.rs  system.rs  top.rs  usb.rs
