[package]
name = "devinspect"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
config = "0.15.23"
dirs = "6.0.0"
netdev = "0.43.0"
owo-colors = "4.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
sysinfo = "0.38.4"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = "0.3.23"
